Breeze theme: Fixed invisible focus ring

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -117,6 +117,7 @@
                 overflow-x: auto;
                 -ms-overflow-style: none;
                 scrollbar-width: none;
+                padding: 4px;
 
                 &::-webkit-scrollbar {
                     display: none;
